--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -3,7 +3,6 @@ name: Update CBPAY Data
 on:
   schedule:
     - cron: '0 * * * *' # Runs every hour
-  workflow_dispatch: # Allows manual triggering
 
 jobs:
   update-data:
@@ -16,7 +15,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version: '3.9'
 
     - name: Install dependencies
       run: pip install requests
@@ -31,9 +30,5 @@ jobs:
         git add cbpay_holders_complete.json cbpay_market_data.json cbpay_large_transactions.json
         git commit -m "Automated data update" || echo "No changes to commit"
         git push
-
-
-
-    fetch_and_save_transactions_data()
 
 
