--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,4 +1,3 @@
-update-data.yml
 name: Update CBPAY Data
 
 on:
@@ -9,7 +8,7 @@ jobs:
   update-data:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Adiciona permissão de escrita para o repositório
+      contents: write
 
     steps:
     - name: Checkout repository
@@ -18,7 +17,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.x' # Usando 3.x para maior compatibilidade
 
     - name: Install dependencies
       run: pip install requests
@@ -33,3 +32,5 @@ jobs:
         git add cbpay_holders_complete.json cbpay_market_data.json cbpay_large_transactions.json
         git commit -m "Automated data update" || echo "No changes to commit"
         git push
+
+
